change words and tree prob and obj

--- a/0/introduccion.tex
+++ b/0/introduccion.tex
@@ -4,7 +4,7 @@
 \chapter*{Introducción}
 \markboth{Introducción}{Introducción}
 \addcontentsline{toc}{chapter}{Introducción}
-La presente investigación tiene como principal objetivo el desarrollo y propuesta de un modelo de inteligencia para diagnosticar de manera correcta y rápida la naturaleza de un nódulo en la glándula de la tiroides, esto a través de la clasificación de este en benigno o maligno. Se plantea utilizar recursos y algoritmos que brinda el extenso campo de estudio de la inteligencia artificial. En particular, se usarán los extensamente desarrollados algoritmos de Deep Learning como las redes neuronales convolucionales para lograr encontrar patrones en imágenes de ultrasonido de la glándula de tiroides, y así lograr correctos diagnósticos en nuevos casos que se presenten al modelo. Las imágenes de ultrasonido de la glándula de tiroides que se usará para el entrenamiento y prueba de los distintos modelos a entrenar procederán de repositorio en línea debidamente validado.	
+La presente investigación tiene como principal objetivo el desarrollo y propuesta de un modelo de inteligencia para pre-diagnosticar de manera correcta y rápida la naturaleza de un nódulo en la glándula de la tiroides, esto a través de la clasificación de este en benigno o maligno. Se plantea utilizar recursos y algoritmos que brinda el extenso campo de estudio de la inteligencia artificial. En particular, se usarán los extensamente desarrollados algoritmos de Deep Learning como las redes neuronales convolucionales para lograr encontrar patrones en imágenes de ultrasonido de la glándula de tiroides, y así lograr correctos pre-diagnósticos en nuevos casos que se presenten al modelo. Las imágenes de ultrasonido de la glándula de tiroides que se usará para el entrenamiento y prueba de los distintos modelos a entrenar procederán de repositorio en línea debidamente validado.	
 
 El proceso que se seguirá para desarrollar un modelo eficaz, capaz de reducir el tiempo que le toma a un médico o radiólogo en detectar y diagnosticar un nódulo tiroideo consiste en una parte inicial de análisis y filtrado de las imágenes, esto con el objetivo de obtener un buen conjunto de datos para el siguiente paso que es el modelado. Se usarán distintos modelos y técnicas dentro del área de la inteligencia artificial y el Deep Learning. Finalmente, se usarán métricas para evaluar cada uno de estos modelos, con el objetivo final de determinar aquel de mejor desempeño. Esto se mostrará a más detalle en la descripción de la metodología de la implementación.
 
