--- a/2/4_hipotesis/hipotesis.tex
+++ b/2/4_hipotesis/hipotesis.tex
@@ -1,6 +1,6 @@
 \subsection{Hipótesis General}
 HG: \newcommand{\HipotesisGeneral}{
-A través del diseño de un modelo de Deep Learning se logra diagnósticar lo nódulos tiroideos a través de imágenes de ultrasonido.
+A través del diseño de un modelo de Deep Learning se logra pre-diagnósticar lo nódulos tiroideos a través de imágenes de ultrasonido.
 }
 \HipotesisGeneral
 
