--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -49,11 +49,11 @@
 			\cline{1-3}
 			{\Pbone} & {\Objone} & {\Hone} & \multirow{6}{3cm}{
 				
-				\centering Dependiente: Diagnóstico de nódulos tiroideos Independiente: Modelo de Deep Learning
+				\centering Dependiente: Pre-diagnóstico de nódulos tiroideos. Independiente: Modelo de Deep Learning.
 
 			} & \multirow{6}{3cm}{
 				
-				\centering Tipo de Investigación: Experimental. Alcance de la investigación: Explicativo
+				\centering Tipo de Investigación: Experimental. Alcance de la investigación: Explicativo.
 			
 			} \\
 			\cline{1-3}
